# corekit

./: .clang-format  .code-workspace  .devcontainer.json  .gitignore  .gitmodules  CMakeLists.txt
env/: Dockerfile  installer.sh
inc/corekit/: core.hpp  types.hpp
inc/corekit/device/: device.hpp  serial.hpp
inc/corekit/device/module/: gpio.hpp  mouse.hpp
inc/corekit/logging/: logger.hpp  stream.hpp  watch.hpp
inc/corekit/opengl/: context.hpp  program.hpp  shader.hpp  texture.hpp  window.hpp
inc/corekit/render/: program.hpp  shader.hpp  texture.hpp  window.hpp
inc/corekit/render/opengl/: program.hpp  shader.hpp  texture.hpp  window.hpp
inc/corekit/structs/: buffer.hpp  gpio.hpp  mouse.hpp  mutex.hpp  vector.hpp
inc/corekit/system/: config.hpp  context.hpp  system.hpp
inc/corekit/system/concurrency/: mutex.hpp  queue.hpp  smphr.hpp  task.hpp  thread.hpp
inc/corekit/system/concurrency/flow/: executor.hpp  operation.hpp  receiver.hpp  scheduler.hpp
inc/corekit/system/conf/: config.hpp  context.hpp  observer.hpp  runtime.hpp
inc/corekit/system/diagnostics/: assert.hpp  logger.hpp  stream.hpp  watch.hpp
inc/corekit/system/flow/: executor.hpp  operation.hpp  scheduler.hpp
inc/corekit/system/sync/: mutex.hpp  queue.hpp  smphr.hpp  thread.hpp
inc/corekit/utils/: assert.hpp  device.hpp  file.hpp  filemgr.hpp  logger.hpp  math.hpp  memory.hpp  stream.hpp  watch.hpp
inc/platform/pico/: mutex.hpp  smphr.hpp  thread.hpp
inc/platform/unix/: mutex.hpp  smphr.hpp  thread.hpp
lib/glad/: CMakeLists.txt
lib/glad/inc/glad/: glad.h
lib/glad/src/: glad.c
lib/mcap/: CMakeLists.txt
lib/mcap/src/: mcap.cpp
lib/pioasm/cmake/: pico_sdk_version.cmake
src/: CMakeLists.txt  core.cpp
src/common/device/driver/: serial.cpp
src/common/render/opengl/: program.cpp  shader.cpp  texture.cpp
src/common/system/: system.cpp
src/common/system/concurrency/: mutex.cpp  smphr.cpp  thread.cpp
src/common/system/diagnostics/: assert.cpp  logger.cpp
src/common/utils/: math.cpp  memory.cpp
src/corekit/: CMakeLists.txt
src/corekit/core/: CMakeLists.txt
src/corekit/core/inc/corekit/: types.hpp
src/corekit/core/inc/corekit/platform/pico/: thread.hpp
src/corekit/core/inc/corekit/platform/unix/: thread.hpp
src/corekit/core/inc/corekit/system/: config.hpp  context.hpp  executor.hpp  mutex.hpp  runtime.hpp  scheduler.hpp  smphr.hpp  thread.hpp
src/corekit/core/inc/corekit/utils/: assert.hpp  color.hpp  config.hpp  context.hpp  device.hpp  filemgr.hpp  math.hpp  memory.hpp  observer.hpp  queue.hpp  stream.hpp  task.hpp
src/corekit/core/src/system/: mutex.cpp  smphr.cpp  thread.cpp
src/corekit/core/src/utils/: assert.cpp  device.cpp  filemgr.cpp  logger.cpp  math.cpp  memory.cpp  stream.cpp  watch.cpp
src/corekit/cuda/: CMakeLists.txt
src/corekit/cuda/inc/corekit/cuda/: core.hpp  draw.hpp  gltex.hpp  image.hpp  math.hpp  model.hpp
src/corekit/cuda/src/: core.cpp  draw.cu  gltex.cpp  image.cu  model.cpp
src/corekit/cuda/test/: main.cpp
src/corekit/opengl/: CMakeLists.txt
src/corekit/opengl/inc/corekit/opengl/: assert.hpp  program.hpp  shader.hpp  texture.hpp  window.hpp
src/corekit/opengl/inc/corekit/opengl/render/: primitive.hpp  renderer.hpp
src/corekit/opengl/src/: assert.cpp  program.cpp  shader.cpp  texture.cpp  window.cpp
src/corekit/pico/: CMakeLists.txt
src/corekit/pico/pioasm/src/cmake/: pioasmHelper.cmake
src/device/: device.cpp  serial.cpp
src/logging/: logger.cpp  stream.cpp  watch.cpp
src/opengl/: context.cpp  program.cpp  shader.cpp  texture.cpp  window.cpp
src/render/: program.cpp  shader.cpp  texture.cpp  window.cpp
src/render/opengl/: texture.cpp  window.cpp
src/structs/: buffer.cpp
src/system/: system.cpp
src/system/concurrency/: mutex.cpp  smphr.cpp
src/system/diagnostics/: logger.cpp  stream.cpp  watch.cpp
src/system/sync/: mutex.cpp  smphr.cpp  thread.cpp
src/utils/: assert.cpp  device.cpp  file.cpp  filemgr.cpp  logger.cpp  math.cpp  stream.cpp  watch.cpp
test/: core.cpp  structs.hpp
